2011-09-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFData.c: Bridge CFData to NSCFData.

2011-09-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/threading.h:
	* Source/CFBase.c:
	* Source/CFCalendar.c:
	* Source/CFLocale.c:
	* Source/CFString.c:
	* Source/CFStringEncoding.c:
	* Source/CFRuntime.c: Abstract threading functions for platforms that
	do not include pthread.

2011-09-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h:
	* Source/atomic_ops.h:
	* Source/GNUmakefile:
	* Source/CFBase.c:
	* Headers/CoreFoundation/CFRuntime.h:
	* Headers/CoreFoundation/CFBase.h: Fixes for compilation on Windows.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFError.c: Retain objects before returning on Copy operations.
	* Source/CFUUID.c:
	* Source/CFCalendar.c:
	* Headers/CoreFoundation/CFCalendar.h: Avoid warnings.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFError.m:
	* Source/CFError.c:
	* Source/NSCFError.m:
	* Source/CFRuntime.c:
	* Source/GNUmakefile: Add C only implementation of CFError.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Initialize CFData.
	* Source/CFData.c: Release instead of deallocate ivar.

2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.h:
	* Source/NSCFType.m: Delete NSCFType.h and move interface definition to
	NSCFType.m.
	* Source/NSCFData.m: Added Objective-C interface to CFData.
	* Source/Data.c: Check deallocator before setting it.

2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Do not require the use of libicuio.
	* Source/GNUmakefile: Update library dependency.

2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFData.h:
	* Source/CFData.m:
	* Source/CFData.c:
	* Source/GNUmakefile: Replace CFData.m with CFData.c.

2011-09-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFRuntime.c: Increment and decrement reference count ourselves