@@ -141,7 +141,6 @@ static const CFRuntimeClass CFDataClass =
 void CFDataInitialize (void)
 {
   _kCFDataTypeID = _CFRuntimeRegisterClass(&CFDataClass);
-  CFRuntimeBridgeClass (_kCFDataTypeID, "NSCFData");
 }
 
 
